package org.sinmem.bean;

public abstract class User {
	public abstract String getUserid();
	public abstract void setUserid(String userid);
	public abstract String getPwd();
	public abstract void setPwd(String pwd);
}
