@startuml 实验管理平台类图
class user{
    -String userID
    -String pwd
    -String name
    -byte userType
}
class student{
    -String Gname
    -Date updateDate
    -String classNo
}
class teacher{
    -String Gname
    -String title
    -String degree
    -String instituteNo
}
class admin{
    -String instituteNo
}
class clazz{
    -String classNo
    -String className
    -String education
    -String majorNo
}
class major{
    -String majorNo
    -String majorName
    -String instituteNo
}
class institute{
    -String instituteNo
    -String facultyName
    -String telephone
}
class course{
    -String courseNo
    -String courseName
    -int creditHour
    -int courseHour
    -String priorCourse
    -String majorNo
}
class courseClass{
    -String courseNo
    -String cClassNo
    -int number
    -int count
    -int term
    -int time
    -String teacherNo
}
class S_C{
    -String courseNo
    -String cClassNo
    -String studentID
    -float score
}

class cexperiment{
    -String experimentNo
    -int oder
    -String title
    -String info
    -String address
    -String courseNo
}

class experimentclause{
    -String experimentclauseNo
    -String title
    -int num
    -float bili
    -String experimentNo
}

class cexperiments{
    -String experimentclauseNo
    -String studentID
    -int oder
    -String title
    -String info
    -String address
    -float score
    -Date date
}
class experimentclauses{
    -String experimentclauseNo
    -String title
    -String evaluate
    -int num
    -float bili
    -float score
    -String experimentNo
}
class experimentscores{
    -String experimentscoresNo
    -String experimentNo
    -String courseNo
    -String cClassNo
    -String studentID
}
student -up-|> user:继承
teacher -up-|> user:继承
admin -up-|> user:继承
student "N" -- "1" clazz:属于
clazz "N" o-- "1" major
major *-- institute
teacher "N" -- "1" institute:就职
admin "N" -- "1" institute:管理
S_C "N" -- "1" student:选择
S_C "N" -- "1" courseClass:供选择
courseClass "N" -- "1" course:开办
courseClass "N" -- "1" teacher:讲授
course "N" -- "1" major:开办
experimentclause *-- cexperiment
cexperiment "N" -- "1" course:属于
experimentscores "N" -- "1" S_C:每个学生选课\n由于多个实验对应\n多份实验成绩单
experimentscores "N" -- "1" cexperiment:每个实验由于\n多个学生对应\n多个实验成绩单
experimentclauses *-- cexperiments
experimentscores "1"--"1" cexperiments:每份成绩单都会\n对应各自的独自的\n实验数据存储
@enduml